--- a/docs/issues/2024-09.rst
+++ b/docs/issues/2024-09.rst
@@ -72,6 +72,12 @@ Autonomy
 `NOLO: Navigate Only Look Once <https://arxiv.org/pdf/2408.01384>`_
     Develops a transformer model to control navigation on a drone based on input video/images.
 
+`Fine-tuning LLMs for Autonomous Spacecraft Control: A Case Study Using Kerbal Space Program <https://arxiv.org/pdf/2408.08676>`_
+    LLMs as autonomous agents to control spaceships in Kerbal Space Program.  Kind of silly on its face, but does manage to succesfully demonstrate that an LLM can kind of control unmanned platforms in an environment where real/synthetic data is sparse.  Might be able to leverage that observation.
+
+`Visual Agents as Fast and Slow Thinkers <https://arxiv.org/pdf/2408.08862>`_
+    Employs a two-stage thinker system to make an autonomous visual agent.  I've seen this type of approach applied a lot to autonomous agents, so the idea probably has legs, and something like an autonomous visual agent is probably necessary for any sort of unmanned system, so this might be worth keeping an eye on.
+
 Reinforcement Learning
 ----------------------
 
@@ -131,6 +137,9 @@ Theory
 
 `Out-of-Distribution Learning with Human Feedback <https://arxiv.org/pdf/2408.07772>`_
     How do you deal with out-of-distribution (OOD) data?  This paper proposes a method to detect the most important OOD datapoints from "wild data" (a great name), uses human feedback to label them, and then trains to both classify and identify OOD objects.  It's a cool method, and one we might be able to use in a "how to use the minimun amount of labels to best improve model performance" sort of way.
+
+`LEVIS: Large Exact Verifiable Input Spaces for Neural Networks <https://arxiv.org/pdf/2408.08824>`_
+    Los Alamos looks for methods to construct input spaces to neural nets that are robust to adversarial attacks.  Sort of an interesting idea, but a very theoretical paper with lots of balls bouncing around.
 
 Applications
 ------------
