--- a/docs/issues/2024-09.rst
+++ b/docs/issues/2024-09.rst
@@ -55,6 +55,8 @@ LLMs
 
 VLMs
 ----
+`LONGVILA: SCALING LONG-CONTEXT VISUAL LANGUAGE MODELS FOR LONG VIDEOS <https://arxiv.org/pdf/2408.10188>`_
+    NVIDIA continues to chip away at VLMs, this time giving VILA extra long context length.  Lots of good stuff in here about training, datasets, performance, etc.
 
 Doctrinaire
 -----------
@@ -66,17 +68,17 @@ Doctrinaire
 
 `Trends, Applications, and Challenges in Human Attention Modelling <https://arxiv.org/pdf/2402.18673>`_
     Our job with AiTR is ultimately to aid human perception. Should we really be drawing boxes? With the new glow work coming up I think we should focus on understanding human attention so that we can better direct it.
-    
+
+`SpaRP: Fast 3D Object Reconstruction and Pose Estimation from Sparse Views <https://arxiv.org/pdf/2408.10195>`_
+    Proposes a method to take one to a small number of unposed images of an object, and create a 3D mesh in 20 seconds.  Seems decent, lots of pictures of videogame characters.
+
+`MeshFormer: High-Quality Mesh Generation with 3D-Guided Reconstruction Model <https://arxiv.org/pdf/2408.10198>`_
+    A novel method for 2D to 3D, sparse image to 3D, and text to 3D generation.  The abstract kind of reads like a madlibs of methods, but the results seem decent.
+
 Autonomy
 --------
 `NOLO: Navigate Only Look Once <https://arxiv.org/pdf/2408.01384>`_
     Develops a transformer model to control navigation on a drone based on input video/images.
-
-`Fine-tuning LLMs for Autonomous Spacecraft Control: A Case Study Using Kerbal Space Program <https://arxiv.org/pdf/2408.08676>`_
-    LLMs as autonomous agents to control spaceships in Kerbal Space Program.  Kind of silly on its face, but does manage to succesfully demonstrate that an LLM can kind of control unmanned platforms in an environment where real/synthetic data is sparse.  Might be able to leverage that observation.
-
-`Visual Agents as Fast and Slow Thinkers <https://arxiv.org/pdf/2408.08862>`_
-    Employs a two-stage thinker system to make an autonomous visual agent.  I've seen this type of approach applied a lot to autonomous agents, so the idea probably has legs, and something like an autonomous visual agent is probably necessary for any sort of unmanned system, so this might be worth keeping an eye on.
 
 Reinforcement Learning
 ----------------------
@@ -137,9 +139,6 @@ Theory
 
 `Out-of-Distribution Learning with Human Feedback <https://arxiv.org/pdf/2408.07772>`_
     How do you deal with out-of-distribution (OOD) data?  This paper proposes a method to detect the most important OOD datapoints from "wild data" (a great name), uses human feedback to label them, and then trains to both classify and identify OOD objects.  It's a cool method, and one we might be able to use in a "how to use the minimun amount of labels to best improve model performance" sort of way.
-
-`LEVIS: Large Exact Verifiable Input Spaces for Neural Networks <https://arxiv.org/pdf/2408.08824>`_
-    Los Alamos looks for methods to construct input spaces to neural nets that are robust to adversarial attacks.  Sort of an interesting idea, but a very theoretical paper with lots of balls bouncing around.
 
 Applications
 ------------
