--- a/docs/issues/2024-09.rst
+++ b/docs/issues/2024-09.rst
@@ -18,8 +18,8 @@ Featured
 `Out-of-Distribution Learning with Human Feedback <https://arxiv.org/pdf/2408.07772>`_
     How do you deal with out-of-distribution (OOD) data?  This paper proposes a method to detect the most important OOD datapoints from "wild data" (a great name), uses human feedback to label them, and then trains to both classify and identify OOD objects.  It's a cool method, and one we might be able to use in a "how to use the minimun amount of labels to best improve model performance" sort of way.
 
-`Self-Taught Evaluators <https://arxiv.org/pdf/2408.02666>`_
-    From META FAIR.  Looks to improve evaluators using only synthetic data - no human labelling, no RLHF.  This sounds crazy, but training a judge in this way, without any human-labelled data, and using it to make Lamma 3 better actually made Llama 3 substantially better.
+`Bye-Bye, Bye Advantage: Estimating the competitive impact of rest differential in the National Football League <https://arxiv.org/pdf/2408.10867>`_
+    Important paper for all you fantasy football fans. Employs a Bayesian State Space model to model investigate the effects of having a bye week on a teams performance.  Finds a rather strong effect before the 2011 Collective Bargaining Agreement, but much less of an effect afterwards.
 
 LLMs
 ----
@@ -47,11 +47,8 @@ LLMs
 `Does Liking Yellow Imply Driving a School Bus? Semantic Leakage in Language Models <https://gonenhila.github.io/files/Semantic_Leakage.pdf>`_
     Finds a new way LLMs can go horribly wrong, called semantic leakage, where two unrelated concepts get linked together in creative ways.  For instance, if you tell an LLM that Kenny likes the color yellow and then ask it what Kenny's job is, it will say that Kenny is a school bus driver because school busses are yellow. 
 
-`Tree Attention: Topology-Aware Decoding for Long-Context Attention on GPU Clusters <https://arxiv.org/pdf/2405.05847>`_
-    Does some real fancy footwork to get "asymptotically" faster computiontal results for some part of transformers.  Code available.
-
-`MUTUAL REASONING MAKES SMALLER LLMS STRONGER PROBLEM-SOLVERS <https://arxiv.org/pdf/2408.06195>`_
-    Microsoft Research Asia proposes rStar, a method for improving reasoning capabilities of small language models by doing a bunch of fancy footwork.  These "how to get small models as good as big models" papers are always fun.
+`To Code, or Not To Code? Exploring Impact of Code in Pre-training <https://arxiv.org/pdf/2408.10914>`_
+    From Cohere.  Investigates the effects of including code in the training data for your LLM, and finds some pretty surprising results - mostly that including code helps improve the performance of your LLM on other tasks such as NLP reasoning and world knowledge.  Begs the question of "why", but they don't really answer that.
 
 VLMs
 ----
@@ -108,11 +105,13 @@ Gotta Go Fast
     How to put vision transformers on an iPhone.  Hilariously, they cite a paper from 2009 showing vision transformer results?? This must be a typo?
 
 `Tree Attention: Topology-Aware Decoding for Long-Context Attention on GPU Clusters <https://arxiv.org/pdf/2408.04093>`_
-    Does some real fancy footwork to get "asymptotically" faster computiontal results for some part of transformers.  Code available.
+    Does some real fancy footwork to get "asymptotically" faster computational results for some part of transformers.  Code available.
 
 `How to Prune and Distill Llama-3.1 8B to an NVIDIA Llama-3.1-Minitron 4B Model <https://developer.nvidia.com/blog/how-to-prune-and-distill-llama-3-1-8b-to-an-nvidia-llama-3-1-minitron-4b-model/>`_
     NVIDIA takes Llama-3.1 8B and turns it into a 4B parameter model with minimal decrease in performance somehow.  I guess NVIDIA is just better at this than Meta?
 
+`FPCA: FIELD-PROGRAMMABLE PIXEL CONVOLUTIONAL ARRAY FOR EXTREME-EDGE INTELLIGENCE <https://arxiv.org/pdf/2408.10233>`_
+    I don't know what an FPCA is, but it seems morally similar to an FPGA.  Worth keeping an eye on?
 
 Theory
 ------
@@ -145,6 +144,9 @@ Applications
 `Do grant proposal texts matter for funding decisions? A field experiment <https://link.springer.com/article/10.1007/s11192-024-04968-7>`_
     A dutch study finds that an abstract and CV hold as much weight as a full proposal. Your representation, connections, and elevator pitch are what matter.  I wonder if this generalizes to other countries/institutions?
 
+`Bye-Bye, Bye Advantage: Estimating the competitive impact of rest differential in the National Football League <https://arxiv.org/pdf/2408.10867>`_
+    Important paper for all you fantasy football fans. Employs a Bayesian State Space model to model investigate the effects of having a bye week on a teams performance.  Finds a rather strong effect before the 2011 Collective Bargaining Agreement, but much less of an effect afterwards.
+
 New Models
 --------
 `Smaller, Safer, More Transparent: Advancing Responsible AI with Gemma <https://developers.googleblog.com/en/smaller-safer-more-transparent-advancing-responsible-ai-with-gemma/>`_
@@ -158,6 +160,12 @@ New Models
 
 `LLaVA-OneVision: Easy Visual Task Transfer <https://arxiv.org/pdf/2408.03326>`_
     ByteDance releases a family of open LLMs that "push the performance boundaries" in some computer vision tasks.  Using anything released by ByteDane is presumably a hard no for government work, but it comes with a blog detailing development that might be worth a read.
+
+`Transfusion: Predict the Next Token and Diffuse Images with One Multi-Modal Model <https://arxiv.org/pdf/2408.11039>`_
+    Meta's new multi-model foundation model.  Can take text and images as part of the same input, as well as generating images.  Can handle complex(ish) instructions for image editting.
+
+`Transformers to SSMs: Distilling Quadratic Knowledge to Subquadratic Models <https://arxiv.org/pdf/2408.10189>`_
+    Figures out a way to distill a tranformer down to a SSM model.  Actually seems like a kind of cool process.Claims to be the best of its kind on the open source market, etc etc
 
 Lunch and Learn
 ---------------
